# dormyboba-morda

./: Makefile  README.md  manage.py  pyproject.toml
dormyboba_morda/: asgi.py  settings.py  urls.py  wsgi.py
invite/: models.py  urls.py  views.py
invite/migrations/: 0001_initial.py
templates/: base.html
templates/invite/: index.html
