[tool.poetry]
name = "dormyboba-morda"
version = "0.1.0"
description = ""
authors = ["aapozd <aapozdnyakove@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
